ecommerce-ms/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ecommerce.local
      http:
        paths:
          - path: /api/v1/customers
            pathType: Prefix
            backend:
              service: { name: customer-service, port: { number: 8080 } }
          - path: /api/v1/products
            pathType: Prefix
            backend:
              service: { name: product-service, port: { number: 8080 } }
          - path: /api/v1/orders
            pathType: Prefix
            backend:
              service: { name: order-service, port: { number: 8080 } }
          - path: /api/v1/notifications
            pathType: Prefix
            backend:
              service: { name: notification-service, port: { number: 8080 } }
